Remove Java 21-related warnings
This commit addresses things that are problems in newer Java versions,
but attempts to get ahead of the issues, to ease the migration to newer
versions. The logging changes are done here at low risk for Accumulo
2.1, since the default logging configuration can be easily changed by
users, and the only affected log messages are trace level and not
typically seen by most users.

* Remove logging uses of `Thread.getId()` in code (deprecated in 21) and
  replace with logging config that shows the thread information
* Additional minor changes to `log4j2-test.properties` files to make it
  easier to compare them and keep them in sync
* Add Threads.toString(Thread) method for one case where logging more
  information about the thread than just the Thread ID would be useful
  (in TabletServerBatchWriter.java)
* Replace use of `new URL(String)` (deprecated in 21) with
  `URI.create(String).toURL()`
* Remove unneeded MiniDFSUtil that was using a deprecated exec method;
  this code is not needed because Hadoop already sets a suitable default
  value for the `dfs.datanode.data.dir.perm` and we don't need to
  compute a different one using this code; similarly remove the
  unnecessary `hadoop.security.token.service.use_ip` property which was
  just setting the default value.
* Remove unused `CollectTabletStats` test-only class and its
  corresponding test case, since it is not used by any test code (this
  removes another case where the deprecated `Thread.getId()` was being
  called.